[tool.poetry]
name = "inchwormmeasurement"
version = "0.1.0"
description = ""
authors = ["higuchi <h.higuchi.93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
opencv-python = "^4.8.0.76"
opencv-contrib-python = "^4.8.0.76"
scipy = "^1.11.2"
matplotlib = "^3.8.0"
pretty-errors = "^1.2.25"
sympy = "^1.12"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.0"
dill = "^0.3.7"
ruff = "^0.0.291"
black = "^23.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200
